# Sharetify

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
